# velo

./: .dockerignore  .env.example  .gitignore  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
app/: admin.py  exception_handler.py  models.py  serializers.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_otp_remove_rider_destination_remove_rider_location_and_more.py  0003_otp_last_requested_at.py
app/templates/: otp_email.html
vello/: asgi.py  settings.py  urls.py  wsgi.py
